--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/merriweather": "^0.2.3",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.17.11",
